# realtime-edge-detection

./: BUILD_INSTRUCTIONS.md  CAPTURE_GUIDE.md  DOCS_INDEX.md  GIT_COMMIT_GUIDE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SCREENSHOT_GUIDE.md  SETUP_GUIDE.md  SUBMISSION_CHECKLIST.md  TROUBLESHOOTING.md  check-screenshots.ps1  gradle.properties  local.properties.template  push_to_github.bat  setup.bat  setup.sh
.github/workflows/: android-ci.yml
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/example/realtime/: CameraHelper.kt  GLRenderer.kt  MainActivity.kt  NativeBridge.kt  YuvUtils.kt
screenshots/: README.md
web/: README.md  index.html  package-lock.json
web/assets/: README.md
web/src/: main.ts
